// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logAbandonCase with the right payload 1`] = `
[
  "CaseAssist.Cancel",
  {
    "reason": "quit",
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logAutoSelectCaseField with the right payload 1`] = `
[
  "CaseAssist.SelectFieldClassification",
  {
    "autoselected": true,
    "fieldClassification": {
      "id": "123",
      "responseId": "baz",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logCaseStart with the right payload 1`] = `
[
  "CaseAssist.Start",
  {},
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logClassificationClick with the right payload 1`] = `
[
  "CaseAssist.SelectFieldClassification",
  {
    "autoselected": false,
    "fieldClassification": {
      "id": "123",
      "responseId": "baz",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logCreateCase with the right payload 1`] = `
[
  "CaseAssist.CreateTicket",
  {
    "ticket": {
      "category": "example category",
      "description": "example description",
      "id": "456",
      "subject": "example subject",
      "system": "abc",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logDocumentSuggestionClick with the right payload 1`] = `
[
  "CaseAssist.DocumentSuggestionClick",
  {
    "documentSuggestion": {
      "id": "exampleUniqueId",
      "responseId": "qux",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logDocumentSuggestionOpen with the right payload 1`] = `
[
  "ItemClick",
  {
    "actionCause": "open",
    "itemMetadata": {
      "title": "exampleTitle",
      "uniqueFieldName": "uniqueId",
      "uniqueFieldValue": "exampleUniqueId",
      "url": "exampleClickUri",
    },
    "position": 1,
    "searchUid": "qux",
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logDocumentSuggestionRating with the right payload 1`] = `
[
  "CaseAssist.DocumentSuggestionFeedback",
  {
    "documentSuggestion": {
      "id": "exampleUniqueId",
      "responseId": "qux",
    },
    "liked": true,
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logQuickviewDocumentSuggestionClick with the right payload 1`] = `
[
  "ItemClick",
  {
    "actionCause": "preview",
    "itemMetadata": {
      "title": "exampleTitle",
      "uniqueFieldName": "uniqueId",
      "uniqueFieldValue": "exampleUniqueId",
      "url": "exampleClickUri",
    },
    "position": 1,
    "searchUid": "qux",
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logSolveCase with the right payload 1`] = `
[
  "CaseAssist.Cancel",
  {
    "reason": "solved",
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logUpdateCaseField with the right payload 1`] = `
[
  "CaseAssist.UpdateField",
  {
    "fieldName": "exampleField",
    "fieldValue": "bar",
  },
]
`;
